<resources>
    <string name="app_name">JustMeet</string>
    <string name="title_activity_bottom_navigation" translatable="false">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logoLogin" translatable="false">logo just meet login</string>
    <string name="imagecontact" translatable="false">imageContact</string>
    <string name="nomusuari">Nom d\'usuari</string>
    <string name="imagepadlock" translatable="false">imagePadlock</string>
    <string name="password">Contrasenya</string>
    <string name="startsesion">Iniciar sessión</string>
    <string name="textRegister">¿Aún no te has registrado? Registrate!!</string>
    <string name="register">Registrarse</string>
    <string name="confirmpassword">Confirmar contraseña</string>
    <string name="email">E-mail</string>
    <string name="birthday">Fecha Nacimiento</string>
    <string name="women">Mujer</string>
    <string name="nameuser">Nom d\'usuari</string>
    <string name="men">Hombre</string>
    <string name="logoregister" translatable="false">logoRegister</string>
    <string name="imageatsing" translatable="false">imageAtSing</string>
    <string name="imagebirthday" translatable="false">imageBirthday</string>
    <string name="imagemen" translatable="false">imageMen</string>
    <string name="imagewomen" translatable="false">imageWomen</string>
    <string name="logogame" translatable="false">logoGame</string>
    <string name="imageclock" translatable="false">imageClock</string>
    <string name="time" translatable="false">10</string>
    <string name="question" translatable="false">Que tipo de musica te gusta más?</string>
    <string name="answer">Resposta sense seleccionar</string>
    <string name="logoplay" translatable="false">logoPlay</string>
    <string name="userAgustin" translatable="false">Agustin,27</string>
    <string name="logoprofile" translatable="false">logoProfile</string>
    <string name="imagesetting" translatable="false">imageSetting</string>
    <string name="imageuser" translatable="false">imageUser</string>
    <string name="aboutme">Sobre mi</string>
    <string name="descriptionuser" translatable="false">Descripción</string>
    <string name="editsetting">Editar Perfil</string>
    <string name="logopremium" translatable="false">logoPremium</string>
    <string name="searchgame">Buscar partida</string>
    <string name="wish">¡Te deseamos lo mejor!</string>
    <string name="logochat" translatable="false">logoChat</string>
    <string name="play">Jugar!</string>
    <string name="numeropregunta">Pregunta 1/10</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="send_message">Enviar</string>
    <string name="cambiar_avatar">Cambiar avatar</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="go_out">Salir</string>
    <string name="age">Edad</string>
    <string name="percent_affinity">Porcentaje de afinidad</string>
    <string name="see_matches">¡Corre a ver con quien has hecho match!</string>
    <string name="back_home">Volver al Inicio</string>
    <string name="noworries">¡No te preocupes, encontraremos a tu persona ideal!</string>
    <string name="letsplayagain">Sigue jugando, te estan esperando!</string>
    <string name="select_avatar">Escoge tu avatar</string>
    <string name="save_avatar">Guardar Avatar</string>
    <string name="maxdistance">Distancia máxima</string>
    <string name="age_range">Rango de Edad</string>
    <string name="playvs">Jugar contra</string>
    <string name="close_session">Cerrar sesion</string>
    <string name="description_profile">Descripción</string>
    <string name="open_chat">Abrir chat</string>
    <string name="matches_list">Lista de Matches</string>
    <string name="select_plan">Selecciona un plan</string>
    <string name="onemonth">1 mes</string>
    <string name="price_month">9,99 €/mes</string>
    <string name="six_month">3 meses</string>
    <string name="price_monthlong">5,99 €/mes</string>
    <string name="advents_premium">Ventajas de ser premium</string>
    <string name="unlimited_games">Partidas ilimitadas</string>
    <string name="hide_ad">Ocultar anuncios</string>
    <string name="logo_premium">Logo premium</string>
    <string name="buy_premium">Comprar</string>
    <string name="user_leave_chat">%s ha abandonado el chat</string>
    <string name="user_connect_chat">%s se ha conectado al chat</string>
    <string name="nochangesmodify">No hay cambios a modificar</string>
    <string name="savechanges">Cambios guardados</string>
    <string name="go_out_profile">Salir del Perfil</string>
    <string name="confirm_go_out_profile">¿Estás seguro de que deseas salir sin guardar cambios?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="current_position">Posicion actual</string>
    <string name="justmeet_user">Usuario Just Meet</string>
    <string name="permision_acces_file">El permís ACCESS_FINE_LOCATION no està disponible</string>
    <string name="permision_acces_coarse">El permís ACCESS_COARSE_LOCATION no està disponible</string>
    <string name="select_an_avatar">Has de escoger un avatar!!</string>
    <string name="insert_error_avatar">Ha habido un error en la insercion del avatar, intentelo mas tarde</string>
    <string name="correct_login">Login Correcte</string>
    <string name="incorrect_password">Contrasenya incorrecte</string>
    <string name="username_dontexists">Aquest nom d\'usuari no està registrat</string>
    <string name="invalid_age">Edad no valida</string>
    <string name="write_valid_email">Introdueix un email vàlid</string>
    <string name="userregistredfine">Usuari registrat amb èxit</string>
    <string name="userexistsbd">Ja existeix un usuari amb aquest nom</string>
    <string name="differentpassword">Les contrasenyes no coincideixen</string>
    <string name="empty_information">Hi han camps buits!!!</string>
    <string name="go_out_settings">Salir de Ajustes</string>
    <string name="confirm_go_out_settings">Estas seguro que quieres salir sin guardar cambios?</string>
    <string name="confirm_close_session">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="session_closed">Sessión cerrada</string>
    <string name="finding_game">Buscando partida...</string>
    <string name="copyright">© Just Meet 2023. Todos los derechos reservados</string>
    <string name="premium_comprado">Premium comprado</string>
    <string name="method_buy_premium">Método de pago</string>
    <string name="numbertarget">Número de tarjeta</string>
    <string name="namesurnametarget">Nombre y apellidos impresos en la tarjeta</string>
    <string name="postalcode">Código postal</string>
    <string name="direccion_email">Direccion correo electronico</string>
    <!--    <string name="mmaa_error">El MMAA ha de contener una \'/' entre años</string>-->
    <string name="plan_selected">Plan seleccionado: %1$s, %2$s</string>
    <string name="method_pay">cerrar</string>
    <string name="method_pay_mm_aa" translatable="false">MM/AA</string>
    <string name="method_pay_cvc" translatable="false">CVC</string>
    <string name="method_pay_card">card</string>
    <string name="method_pay_plan">Plan seleccionado : 1 mes, 21,99€</string>
    <string name="method_pay_buy">Comprar</string>
    <string name="chat_imagesetting">back</string>
    <string name="chat_name" translatable="false">Maria</string>
    <string name="login_facebook" translatable="false">loginfacebook</string>
    <string name="login_instagram" translatable="false">login instagram</string>
    <string name="login_google" translatable="false">login google</string>
    <string name="_1234" translatable="false">1234</string>
    <string name="login_linkedin" translatable="false">login linkedin</string>
    <string name="login_adrian" translatable="false">adrian</string>
    <string name="resume_logo" translatable="false">resume logo</string>
    <string name="resume_match" translatable="false">resume match</string>
    <string name="_80" translatable="false">80%</string>
    <string name="_30" translatable="false">30%</string>
    <string name="settings_23_km" translatable="false">23 km</string>
    <string name="settings_18_27" translatable="false">18-27</string>
    <string name="advertisement_btn" translatable="false">advertisement button</string>
    <string name="advertisement_access">¡HAZ CLICK PARA ACCEDER A LA PAGINA OFICIAL</string>
    <string name="advertisement_flechas" translatable="false">⇈</string>
    <string name="advertisement_last">Accederas a la app despues del anuncio</string>
    <string name="advertisement_premium">¡Contrata premium para omitirlos!</string>
    <string name="avatar_avatar" translatable="false">avatar</string>
    <string name="hola_que_tal">Hola que tal</string>
    <string name="match_crown" translatable="false">match crown</string>
    <string name="match_avatar" translatable="false">match avatar</string>
    <string name="user_disconnect">El usuario se ha desconectado</string>
    <string name="avatar_selected" translatable="false">avatar selected</string>
    <string name="dialog_info_name" translatable="false">Agustin,27</string>
    <string name="dialog_info_desc">Soy Agustin, el admin de toda esta app de la que vas a disfrutar</string>
    <string name="main_gold_world" translatable="false">main gold world</string>
    <string name="main_click">¡Haz click para buscar partida!</string>
    <string name="message_to_send">"Introduce un mensaje a enviar!"</string>
    <string name="mmaa_restring">"El MMAA ha de contener una barra!"</string>
    <string name="user_leave_game">"El jugador ha abandonado la partida"</string>
    <string name="premium_enable">"Ya tienes el premium comprado"</string>
    <string name="plan_enable">"Tienes que seleccionar un plan!"</string>
    <string name="main_btn_logo" translatable="false">main btn logo</string>
    <string name="premium_limited" translatable="false">premium limited</string>
    <string name="premium_hide" translatable="false">premium hide</string>
    <string name="premium_check" translatable="false">check</string>
    <string name="profile_crownplane" translatable="false">profile crownplane</string>
    <string name="warning">Aviso</string>
    <string name="no_coincidence">La persona con la que se te ha emparejado no cumple los requisitos</string>
    <string name="keep_looking">Seguir buscando</string>


</resources>