<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondobgblanco"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBackDetailMatch"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imagesetting"
        android:scaleType="centerCrop"
        android:src="@drawable/arrowbackgold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivDetalleMatch"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logodoradodos" />

    <TextView
        android:id="@+id/tvNameEdadMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/champagnebold"
        android:padding="10dp"
        android:text="@string/dialog_info_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/champagnebold"
        android:text="@string/description_profile"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvDescriptionUserMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="23dp"
        android:fontFamily="@font/champagnebold"
        android:padding="10dp"
        android:text="@string/dialog_info_desc"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpenChat"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/champagnebold"
        android:text="@string/open_chat"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
