<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondobg1"
    tools:context=".Activitys.SettingsActivity">

    <ImageButton
        android:id="@+id/backButtonSettings"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imagesetting"
        android:scaleType="centerCrop"
        android:src="@drawable/arrowbackgold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivJustSettings"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/logoprofile"
        android:scaleType="centerCrop"
        android:src="@drawable/justsettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivJustSettings">

        <ImageView
            android:id="@+id/logoLocation"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/imagecontact"
            android:padding="5dp"
            android:src="@drawable/asset_location" />

        <TextView
            android:id="@+id/tvDistanciaMax"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/dark_gold"
            android:fontFamily="@font/champagnebold"
            android:gravity="center"
            android:text="@string/maxdistance"
            android:textColor="@color/dark_gold"
            android:textColorHint="@color/dark_gold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvKM"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/dark_gold"
            android:fontFamily="@font/champagnebold"
            android:gravity="center"
            android:text="@string/settings_23_km"
            android:textColor="@color/dark_gold"
            android:textColorHint="@color/dark_gold"
            android:textSize="18sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbarDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:max="99"
        android:progress="20"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLocation" />

    <LinearLayout
        android:id="@+id/linearRangoEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbarDistancia">

        <ImageView
            android:id="@+id/logoRangoEdad"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/imagecontact"
            android:padding="5dp"
            android:src="@drawable/asset_filter_edad" />

        <TextView
            android:id="@+id/tvRangoEdad"
            android:layout_width="141dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/dark_gold"
            android:fontFamily="@font/champagnebold"
            android:gravity="center"
            android:text="@string/age_range"
            android:textColor="@color/dark_gold"
            android:textColorHint="@color/dark_gold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEdadMinMax"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/dark_gold"
            android:fontFamily="@font/champagnebold"
            android:gravity="center"
            android:text="@string/settings_18_27"
            android:textColor="@color/dark_gold"
            android:textColorHint="@color/dark_gold"
            android:textSize="18sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:max="99"
        android:min="18"
        android:progress="18"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearRangoEdad"

        />

    <SeekBar
        android:id="@+id/seekBarMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:max="100"
        android:min="19"
        android:progress="100"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBarMin" />

    <TextView
        android:id="@+id/tvJugarvs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/champagnebold"
        android:text="@string/playvs"
        android:textAlignment="center"
        android:textColor="@color/dark_gold"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBarMax"

        />

    <LinearLayout
        android:id="@+id/linearGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJugarvs">

        <ImageView
            android:id="@+id/logoGenre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagemen"
            android:padding="5dp"
            android:src="@drawable/asset_male_simbol" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/dark_gold"
            android:fontFamily="@font/champagnebold"
            android:text="@string/men"
            android:textAlignment="center"
            android:textColor="@color/light_gold"
            android:textColorHint="@color/dark_gold"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/logoFemale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagewomen"
            android:padding="5dp"
            android:src="@drawable/asset_female_simbol" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/dark_gold"
            android:fontFamily="@font/champagnebold"
            android:text="@string/women"
            android:textAlignment="center"
            android:textColor="@color/light_gold"
            android:textColorHint="@color/dark_gold"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGuardarCambios"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/champagnebold"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearGenre" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCerrarSesion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/champagnebold"
        android:text="@string/close_session"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>