<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondobgblanco"
    android:orientation="vertical"
    tools:context=".Activitys.ActivityBuyPremium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/method_pay"
            android:scaleType="centerCrop"
            android:src="@drawable/closeimg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMetodoPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/champagnebold"
            android:padding="10dp"
            android:text="@string/method_buy_premium"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTargetNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:fontFamily="@font/timesnewnormal"
            android:hint="@string/numbertarget"
            android:inputType="number"
            android:maxLength="16"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMetodoPago" />

        <EditText
            android:id="@+id/etNameSurNameTarget"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/black"
            android:textColorHint="@color/black"
            android:fontFamily="@font/timesnewnormal"
            android:hint="@string/namesurnametarget"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTargetNumber" />

        <LinearLayout
            android:id="@+id/linearYearCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNameSurNameTarget">

            <EditText
                android:id="@+id/etMMAA"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/timesnewnormal"
                android:textColorHint="@color/black"
                android:hint="@string/method_pay_mm_aa"
                android:inputType="date"
                android:maxLength="5"
                android:maxLines="1"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etCVC"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="70dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/timesnewnormal"
                android:textColorHint="@color/black"
                android:hint="@string/method_pay_cvc"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/method_pay_card"
                android:src="@drawable/creditcard" />

        </LinearLayout>

        <EditText
            android:id="@+id/etPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/timesnewnormal"
            android:textColorHint="@color/black"
            android:hint="@string/postalcode"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearYearCode" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/timesnewnormal"
            android:hint="@string/direccion_email"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPostalCode" />

        <TextView
            android:id="@+id/planSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/timesnewnormal"
            android:text="@string/method_pay_plan"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmBuyPremium"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/champagnebold"
            android:text="@string/method_pay_buy"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planSelected" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>